# CoreDir

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CoreDir/: CoreDir.h
CoreDir/include/: CoreDir.h  CoreDir_Utils.h
CoreDir/src/: CoreDir.cpp  os_functions.h
CoreDir/src/gnu_linux/: os_functions.cpp
CoreDir/src/win32/: os_functions.cpp
docs/: Doxyfile  TODO.txt  mainpage.dox  site_info
ide/: main.cpp
ide/clion/: CMakeLists.txt
ide/vs_2015/: CoreDir.sln  CoreDir.vcxproj  CoreDir.vcxproj.filters  NO  main.cpp
include/: CoreDir.h  CoreDir_Utils.h
scripts/: update_version.sh
src/: CoreDir.cpp  CoreDir_GNU_Linux.cpp  os_functions.h
src/gnu_linux/: os_functions.cpp
src/win32/: os_functions.cpp
